--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,8 +1,35 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-#CONFIG_ZMK_RGB_UNDERGLOW=y
-#CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+
+# Start LEDs off at 75%
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=10
+
+# Predeterminado por estado
+# CONFIG_ZMK_RGB_UNDERGLOW_ON_START
+
+# Índice de efectos predeterminado de la lista de efectos (ver a continuación)
+# Valor	Efecto
+# 0	Color sólido
+# 1	Respirar
+# 2	Espectro
+# 3	Remolino
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
+
+
+# When USB is disconnected, turn off LEDs
+# Change to n if you wish to keep LEDs on even when USB is unpluged.
+# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
+# Habilitar un widget para mostrar la salida actual (USB/BLE)
+# CONFIG_ZMK_WIDGET_OUTPUT_STATUS
+
+# Habilitar un widget para mostrar información sobre la carga de la batería
+# CONFIG_ZMK_WIDGET_BATTERY_STATUS
+
+# Habilitar un widget para mostrar palabras por minuto
+# CONFIG_ZMK_WIDGET_WPM_STATUS=y
